# mira-kontext-testing-bot

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  repl.py
examples/: multi_user_scenario.py  simple_chat.py
repo_clean/: pyproject.toml
repo_clean/01_pipeline_setup/: .env.example  config.yaml  config_example.yaml  content_cleaner.py  pipeline_config.py
repo_clean/02_ontology_and_db/: ontology_definition.json  probe_client_data.py
repo_clean/02_ontology_and_db/sql/: knowledge_base_v3_schema.sql
repo_clean/03_data_ingestion/document_processors/: process_documents.py
repo_clean/03_data_ingestion/embeddings/: embed_and_upload.py
repo_clean/03_data_ingestion/scrapers/: full_site_scraper.py
repo_clean/04_bot_and_eval/evaluations/: eval_ragas.py
repo_clean/04_bot_and_eval/fastapi_backend/: main.py
repo_clean/04_bot_and_eval/n8n_templates/: rag_workflow_template.json
repo_clean/04_bot_and_eval/prompts/: system_prompt.txt
repo_clean/05_deployment/widget/: chat_widget.js
repo_clean/data/probe/: probe_result.json
src/mira_kontext_testing_bot/: __init__.py  __main__.py  chat_interface.py  cli.py  client.py  config.py  errors.py  intent_classifier.py  llm_client.py  memory_manager.py  models.py  session.py  test_runner.py  web_fetcher.py
tests/: __init__.py  conftest.py  test_chat_intents.py  test_client.py  test_intent_classifier.py  test_models.py  test_ollama_catalog.py  test_session.py  test_web_fetcher.py
