[tool.poetry]
name = "mira-kontext-testing-bot"
version = "0.1.0"
description = "Agentic testing chatbot for Mira Kontext API"
authors = ["Mira Team"]
readme = "README.md"
packages = [{include = "mira_kontext_testing_bot", from = "src"}]
scripts = { kontext-bot = "mira_kontext_testing_bot.cli:main" }

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"
click = "^8.1.0"
rich = "^13.0.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
anyio = "^4.0.0"
firecrawl-py = "^1.15.0"
repl-toolkit = { path = "../repl-toolkit", develop = true }
openai = "^2.37.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pyright = "^1.1.390"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
strict = ["src/mira_kontext_testing_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that call external HTTP APIs (needs network)",
]
