[tool.poetry]
name = "chatbot-pipeline"
version = "0.1.0"
description = "Generic RAG chatbot pipeline for client onboarding"
authors = ["Team"]
readme = "RUNBOOK.md"

[tool.poetry.dependencies]
python = "^3.11"
supabase = "^2.0.0"
openai = "^1.0.0"
python-dotenv = "^1.0.0"
tiktoken = "^0.7.0"
pyyaml = "^6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.0"
firecrawl-py = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
